Implement HTTP Server
Server listens and serves with the host app's router as the handler. It also uses host app's logger for logging.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,5 @@ services:
         build: .
         env_file:
             - .env
-        volumes:
-            - .:/src/nitd-results/
+        # volumes:
+        #     - .:/src/nitd-results/
